--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <%= link_to "Home", root_path %>
+    <%= link_to "Athletes Lounge", root_path %>
     <%= yield %>
   </body>
 </html>
