--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,2 +1,4 @@
-<h1>WODs!</h1>
-<p>Post your WOD times</p>
+<div class="jumbotron">
+  <h1 class="center">WODs!</h1>
+  <p class="center">Post your WOD times</p>
+</div>
